hello-namespace/config-root/namespaces/palo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: palo
spec: {}
status: {}
